# SmartHouse

./: .gitignore  filejson.txt  userjson.txt
sm-front-end/: angular.json  package-lock.json  package.json
sm-front-end/src/: styles.css
sm-front-end/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
sm-front-end/src/app/auth/: auth.interceptor.ts  auth.service.ts
sm-front-end/src/app/auth/login/: login.component.css  login.component.html  login.component.ts
sm-front-end/src/app/auth/login/login-form/: login-form.component.ts
sm-front-end/src/app/auth/login/register-form/: register-form.component.ts
sm-front-end/src/app/home/: home.component.html  home.component.ts
sm-front-end/src/app/home/camera/: camera.component.html  camera.component.ts  camera.service.ts
sm-front-end/src/app/home/door-list/: door-list.component.html  door-list.component.ts  door.service.ts
sm-front-end/src/app/home/door-list/door/: door.component.css  door.component.html
sm-front-end/src/app/home/interactive-map/: interactive-map.component.css  interactive-map.component.ts
sm-front-end/src/app/home/light-bulb-list/: light-bulb-list.component.html  light-bulb-list.component.ts  light-bulb.service.ts
sm-front-end/src/app/home/light-bulb-list/light-bulb/: light-bulb.component.html  light-bulb.component.ts
sm-front-end/src/app/home/navbar/: navbar.component.html  navbar.component.ts
sm-front-end/src/environments/: environment.prod.ts  environment.ts
sm-gpio/: Makefile  configure.ac  sm-gpio
sm-gpio/include/: sm-gpio.h
sm-gpio/lib/: Makefile.am  sm-gpio.c  smgpio.c
sm-gpio/src/: Makefile.am  main  main.c
sm-library/: Makefile  README.md  configure.ac  smarthouse  smarthouse.c  smarthouse.h  test_doors.py
sm-library/include/: smarthouse.h
sm-library/lib/: Makefile.am  smarthouse.c
sm-library/src/: Makefile.am  main.c
sm-server/: CMakeLists.txt  README.md  main.cpp  userjson.txt
sm-server/src/: encrypting.cpp  fileHandler.cpp
sm-server/src/models/: camera.cpp  door.cpp  home.cpp  lightBulb.cpp  user.cpp
